# stac-generator

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CHANGES.md  LICENSE.txt  README.md  docs_requirements.txt  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  docs_build.yml  formatting.yml  publish.yml  release.yml  tests.yml
_sources/api/asset_generator/: api.rst.txt
_sources/api/item_generator/: item_generator_api.rst.txt
_sources/asset_scanner/: index.rst.txt  processors.rst.txt
_sources/item_descriptions/: item_descriptions.rst.txt
_sources/item_generator/shared/: example_config.rst.txt
api/asset_generator/: api.html
api/asset_scanner/: asset_scanner_api.html
api/item_generator/: item_generator_api.html
asset_generator/: index.html
asset_scanner/: LICENSE  __init__.py  index.html  input_plugins.html  output_plugins.html  plugin_filters.html  processors.html
asset_scanner/core/: __init__.py  aggregation_processor.py  collection_describer.py  decorators.py  exceptions.py  extractor.py  generator.py  handler_picker.py  item_describer.py  processor.py  types.py  utils.py
asset_scanner/plugins/extraction_methods/: __init__.py  default_extract.py  elasticsearch_extract.py  esgf_solar_extract.py  iso19115_extract.py  json_extract.py  mixins.py  object_store_stats_extract.py  posix_stats_extract.py  postprocessors.py  preprocessors.py  regex_extract.py  utils.py  xml_extract.py
asset_scanner/plugins/filters/: __init__.py  path_regex.py  regex.py
asset_scanner/plugins/generators/: asset_generator.py  collection_generator.py  item_generator.py
asset_scanner/plugins/id_extraction_methods/: default_extract.py  hash_extract.py
asset_scanner/plugins/input_plugins/: __init__.py  base.py  file_input.py  file_system_input.py  intake_esm_input.py  object_store_input.py  rabbit_mq_input.py  solr_input.py  thredds_input.py
asset_scanner/plugins/output_plugins/: __init__.py  base.py  elasticsearch_backend.py  file_out.py  intake_esm_out.py  json_out.py  rabbit_mq_output.py  stacapi_backend.py  standard_out.py
asset_scanner/plugins/post_extraction_methods/: cv_post_extract.py  vocab_extract.py  vocab_post_extract.py
asset_scanner/plugins/processors/: elasticsearch_aggregator.py
asset_scanner/scripts/: asset_scanner.py
asset_scanner/types/: __init__.py  generators.py  source_media.py
bulk_outputs/elasticsearch/: index.html
bulk_outputs/rabbit_mq/: index.html
bulk_outputs/standard_out/: index.html
docs/: .buildinfo  extractor.html  generator_config.md  genindex.html  index.html  index.md  input_plugins.html  inputs.md  item_descriptions.html  mappings.md  objects.inv  output_plugins.html  outputs.md  py-modindex.html  recipes.md  requirements.txt  search.html  searchindex.js  usage.html
docs/_sources/: extractor.rst.txt  index.rst.txt  item_descriptions.rst.txt  usage.rst.txt
docs/doctrees/: environment.pickle  index.doctree  input_plugins.doctree  output_plugins.doctree  usage.doctree
docs/html/: objects.inv  py-modindex.html  searchindex.js  usage.html
docs/html/_sources/: output_plugins.rst.txt  usage.rst.txt
docs/scripts/: gen_plugins.py
docs/source/: conf.py  index.rst  item_descriptions.rst
docs/source/api/: item_descriptions.rst
docs/source/asset_generator/: index.rst
docs/source/asset_scanner/: index.rst  input_plugins.rst  output_plugins.rst  plugin_filters.rst  processors.rst
docs/source/collection_descriptions/: building_a_workflow.rst  collection_descriptions.rst
docs/source/item_descriptions/: building_a_workflow.rst  item_descriptions.rst
docs/source/item_generator/: index.rst
docs/source/plugins/: input_plugins.rst  output_plugins.rst  plugin_filters.rst  plugins.rst
docs/source/recipes/: building_a_workflow.rst  recipes.rst
docs/source/stac_generator/: extraction_methods.rst  filters.rst  generators.rst  index.rst  inputs.rst  (+3 more)
docs_src/: Makefile
docs_src/source/: conf.py  index.rst  input_plugins.rst  item_descriptions.rst  usage.rst
example/: README.rst  example_notebook.ipynb
example/conf/: collection-config.yml  collection-generator.yaml  item-generator.yaml
example/input/: collections.txt
example/output/: asset.txt
generator_config/: index.html
inputs/: index.html
inputs/elasticsearch_aggregation/: index.html
inputs/file_system/: index.html
inputs/intake_esm/: index.html
inputs/object_store/: index.html
inputs/rabbit_mq/: index.html
inputs/solr/: index.html
inputs/text_file/: index.html
inputs/thredds/: index.html
item_descriptions/: building_a_workflow.html  item_descriptions.html
item_generator/: index.html
item_generator/shared/: example_config.html
item_generator/user_guide/: orientation.html
mappings/: index.html
mappings/jinja2/: index.html
mappings/stac/: index.html
outputs/: index.html
outputs/elasticsearch/: index.html
outputs/intake_esm/: index.html
outputs/json_file/: index.html
outputs/rabbit_mq/: index.html
outputs/stac_fastapi/: index.html
outputs/standard_out/: index.html
outputs/text_file/: index.html
recipes/: index.html
search/: search_index.json
stac_generator/: __init__.py
stac_generator/core/: baker.py  baker_old.py  bulk_output.py  collection_describer.py  decorators.py  exceptions.py  extraction_method.py  generator.py  handler_picker.py  input.py  mapping.py  output.py  process_config.py  processor.py  types.py  utils.py
stac_generator/scripts/: recipe_keys.py  stac_generator.py
stac_generator/types/: __init__.py  generators.py  source_media.py
tests/: test_baker.py  test_collection_describer.py  test_elasticsearch_backend.py  test_elasticsearch_output.py  test_item_describer.py  test_utils.py
tests/extraction_methods/: __init__.py  test_post_processors.py  test_pre_processors.py  test_processors.py
tests/input_plugins/: test_intake_esm_input.py
tests/test_descriptions/: a.yaml  b.yaml
tests/test_recipes/: a.yaml  b.yaml
(+165 files in other folders)
