[project]
name = "stac-generator"
version = "2.0.1"
description = "Framework providing a plugin architecture for metadata extraction and the generation of STACs."
authors = [
    {"name" = "Rhys Evans", "email" = "rhys.r.evans@stfc.ac.uk"}
]
requires-python = ">=3.10, <4"
license = "BSD - See stac_generator/LICENSE file for details"
readme = "README.md"
keywords = ['stac', 'metadata', 'plugin', 'framework']
dependencies = [
    "botocore (>=1.21.44,<2.0.0)",
    "cachetools (>=4.2.4,<5.0.0)",
    "certifi (>=2023.7.22,<2024.0.0)",
    "click (>=8.1.7,<9.0.0)",
    "docutils (>=0.20,<1.0)",
    "elasticsearch (>=7.17.12,<8.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "httpx-auth (>=0.23.0,<1.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "jmespath (>=0.10.0,<1.0.0)",
    "packaging (>=25.0,<26.0)",
    "pika (>=1.2.0,<2.0.0)",
    "pydantic (>=2.1.1,<3.0.0)",
    "pyparsing (>=2.4.7,<3.0.0)",
    "python-dateutil (>=2.8.2,<3.0.0)",
    "python-magic (>=0.4.25,<1.0.0)",
    "pytz (>=2021.1,<2022.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "s3transfer (>=0.5.0,<1.0.0)",
    "siphon (>=0.9,<1.0)",
    "snowballstemmer (>=2.2.0,<3.0.0)",
    "tqdm (>=4.62.3,<5.0.0)",
    "typing-extensions (>=4.7.1,<5.0.0)",
    "setuptools (>=75.8.2,<76.0.0)",
    "bokeh (>=3.6.3,<4.0.0)",
    "dask (>=2025.2.0,<2026.0.0)",
    "distributed (>=2025.2.0,<2026.0.0)",
    "extraction-methods @ file:///Users/rhys.r.evans/Documents/CEDA/search-futures/extraction-methods",
]

[project.urls]
Homepage = "https://github.com/cedadev/stac-generator"

[project.scripts]
stac_generator = 'stac_generator.scripts.stac_generator:main'
recipe_keys = 'stac_generator.scripts.recipe_keys:main'

[project.optional-dependencies]
docs = [
    "mkdocstrings[python]>=0.18",
    "mkdocs-material>=9.7.1",
    "mkdocs-gen-files>=0.6.0",
    "griffe-fieldz>=0.4.0"
]
elasticsearch = ["elasticsearch"]
intake-esm = ["intake-esm"]
rabbitmq = ["pika"]
thredds = ["siphon"]

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"


[tool.poetry.dependencies]
extraction-methods = {develop = true}
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.mypy]
strict = false
ignore_missing_imports = true
packages = "stac_generator"

[project.entry-points."stac_generator.inputs"]
elasticsearch_aggregation = "stac_generator.plugins.inputs.elasticsearch_aggregation:ElasticsearchAggregationInput"
file_system = "stac_generator.plugins.inputs.file_system:FileSystemInput"
intake_esm = "stac_generator.plugins.inputs.intake_esm:IntakeESMInput"
object_store = "stac_generator.plugins.inputs.object_store:ObjectStoreInput"
rabbitmq = "stac_generator.plugins.inputs.rabbit_mq:RabbitMQInput"
solr = "stac_generator.plugins.inputs.solr:SolrInput"
text_file = "stac_generator.plugins.inputs.text_file:TextFileInput"
thredds = "stac_generator.plugins.inputs.thredds:ThreddsInput"

[project.entry-points."stac_generator.outputs"]
elasticsearch = "stac_generator.plugins.outputs.elasticsearch:ElasticsearchOutput"
elasticsearch_bulk = "stac_generator.plugins.bulk_outputs.elasticsearch:ElasticsearchBulkOutput"
intake_esm = "stac_generator.plugins.outputs.intake_esm:IntakeESMOutput"
json_file = "stac_generator.plugins.outputs.json_file:JsonFileOutput"
rabbitmq = "stac_generator.plugins.outputs.rabbit_mq:RabbitMQOutput"
rabbitmq_bulk = "stac_generator.plugins.bulk_outputs.rabbit_mq:RabbitMQBulkOutput"
stac_fastapi = "stac_generator.plugins.outputs.stac_fastapi:STACFastAPIOutput"
standard_out = "stac_generator.plugins.outputs.standard_out:StandardOutOutput"
standard_out_bulk = "stac_generator.plugins.bulk_outputs.standard_out:StandardOutBulkOutput"
text_file = "stac_generator.plugins.outputs.text_file:TextFileOutput"

[project.entry-points."stac_generator.mappings"]
jinja = "stac_generator.plugins.mappings.jinja2:Jinja2Mapping"
stac = "stac_generator.plugins.mappings.stac:STACMapping"

[project.entry-points."stac_generator.generator"]
generator = "stac_generator.core.generator:Generator"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
